--- a/style/light-style.css
+++ b/style/light-style.css
@@ -33,7 +33,8 @@
 }
 
 .multi-post .mpfooter {
-  background-color: #ff6b00;
+  /*background-color: #ff6b00;*/
+  background-color: #D14904;
   height: 48px;
   color: #fff;
   font-weight: bold;
@@ -146,7 +147,8 @@
 }
 
 .card .card-footer {
-  background-color: #ff6b00;
+  /*background-color: #ff6b00;*/
+  background-color: #D14904;
   height: 48px;
   color: #fff;
   font-weight: bold;
